fix(list): focus covers whole row, IE11 layout fix
Closes #2222. Closes #2240.

--- a/src/components/list/list-theme.scss
+++ b/src/components/list/list-theme.scss
@@ -24,4 +24,7 @@ md-list.md-THEME_NAME-theme {
       }
     }
   }
+  md-list-item button {
+    background-color: '{{background-color}}';
+  }
 }
