--- a/src/components/list/list.scss
+++ b/src/components/list/list.scss
@@ -48,7 +48,7 @@ md-list-item {
     }
   }
   &.md-with-secondary {
-    padding-right: $list-item-padding-horizontal;
+    position: relative;
   }
   &.md-clickable:hover {
     cursor: pointer;
@@ -126,16 +126,15 @@ md-list-item, md-list-item .md-list-item-inner {
     box-sizing: content-box;
   }
 
-  md-checkbox.md-secondary {
-    margin-right: 0px;
-  }
+  md-checkbox.md-secondary,
   md-switch.md-secondary {
-    margin: 0;
-    position: relative;
-    right: -9px;
+    margin-right: 0px;
   }
   .md-secondary {
     margin-left: $list-item-secondary-left-margin;
+    position: absolute;
+    right: $list-item-padding-horizontal;
+    top: 0;
   }
 
   & > p, & > .md-list-item-inner > p {
